--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto';
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -29,11 +35,12 @@ button {
 
 .navigation div {
     font-size: 24px;
+    font-weight: 900;
 }
 
 .title h1 {
     font-size: 48px;
-    font-weight: bold;
+    font-weight: 900;
     color: #f9faf8;
 }
 
@@ -56,5 +63,125 @@ button {
     color: #1f2937;
     font-style: italic;
     font-size: 36px;
-    font-weight: lighter;
+    font-weight: 300;
+}
+
+.song-name {
+    font-weight: 900;
+}
+
+/*flexbox*/
+.header {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+    .navigation {
+        display: flex;
+        justify-content: space-between;
+        padding-inline: 190px;
+        margin: 18px;
+    }
+
+    ul {
+        display: flex;
+        gap: 48px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title {
+        display: flex;
+        justify-content: center;
+    }
+
+    .left {
+        flex-direction: column;
+        flex: 1 0 0;
+    }
+
+    #barra {
+        height: 250px;
+        width: 500px;
+        object-fit: cover;
+    }
+
+.content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 128px;
+}
+
+.gallery div {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+
+#lacerda, #fita, #pelo, #itapua {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 8px;
+    border: 4px solid #3882f6;
+}
+
+.song {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 128px;
+}
+
+.song-name {
+    align-self: flex-end;
+}
+
+.cta {
+    display: flex;
+    padding: 128px;
+    justify-content: center;
+    align-content: center;
+}
+
+.burrito {
+    background-color: #3882f6;
+    width: 750px;
+    flex-basis: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 32px;
+    border-radius: 16px;
+}
+
+.burrito button {
+    border: 2px solid #f9faf8;
+    font-size: 18px;
+    border-radius: 4px;
+}
+
+.message {
+    color: #f9faf8;
+}
+
+.footer {
+    display: flex;
+    padding: 16px;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.footer a {
+    flex: 1;
 }
