--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     padding: 0;
     margin: 0;
+    background-color: #1f2937;
 }
 
 a {
@@ -26,7 +27,10 @@ ul {
 button {
     background-color: #3882f6;
     border: none;
-    border-radius: 4px;
+    border-radius: 12px;
+    font-weight: 900;
+    margin: 4px;
+    padding: 12px;
 }
 
 .navigation {
@@ -42,6 +46,7 @@ button {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    margin: 0;
 }
 
 .description {
@@ -80,20 +85,24 @@ button {
     .navigation {
         display: flex;
         justify-content: space-between;
-        padding-inline: 190px;
+        padding-inline: 135px;
         margin: 18px;
     }
 
-    ul {
-        display: flex;
-        gap: 48px;
-        justify-content: center;
-        align-items: center;
-    }
+        ul {
+            display: flex;
+            gap: 48px;
+            justify-content: center;
+            align-items: center;
+        }
 
     .title {
         display: flex;
         justify-content: center;
+        padding-inline: 153px;
+        padding-block: 64px;
+        margin-top: 48px;
+        gap: 64px;
     }
 
     .left {
@@ -101,11 +110,22 @@ button {
         flex: 1 0 0;
     }
 
-    #barra {
-        height: 250px;
-        width: 500px;
-        object-fit: cover;
+        .left button {
+            padding: 16px;
+            font-weight: 900;
+        }
+
+    .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+
+        #barra {
+            height: 250px;
+            width: 550px;
+            object-fit: cover;
+        }
 
 .content {
     flex: 1;
@@ -113,75 +133,73 @@ button {
     flex-direction: column;
 }
 
-.gallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 128px;
-}
+    .gallery {
+        background-color: #f9faf8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 128px;
+    }
 
-.gallery div {
-    display: flex;
-    justify-content: center;
-    gap: 32px;
-}
+        .gallery div {
+            display: flex;
+            justify-content: center;
+            gap: 32px;
+        }
 
-#lacerda, #fita, #pelo, #itapua {
-    height: 150px;
-    width: 150px;
-    object-fit: cover;
-    border-radius: 8px;
-    border: 4px solid #3882f6;
-}
+        #lacerda, #fita, #pelo, #itapua {
+            height: 150px;
+            width: 150px;
+            object-fit: cover;
+            border-radius: 8px;
+            border: 4px solid #3882f6;
+        }
 
-.song {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 128px;
-}
+    .song {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 128px;
+    }
 
-.song-name {
-    align-self: flex-end;
-}
+        .song-name {
+            align-self: flex-end;
+        }
 
-.cta {
-    display: flex;
-    padding: 128px;
-    justify-content: center;
-    align-content: center;
-}
+    .cta {
+        background-color: #f9faf8;
+        display: flex;
+        padding: 128px;
+        justify-content: center;
+        align-content: center;
+    }
 
-.burrito {
-    background-color: #3882f6;
-    width: 750px;
-    flex-basis: auto;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 32px;
-    border-radius: 16px;
-}
+        .burrito {
+            background-color: #3882f6;
+            width: 750px;
+            flex-basis: auto;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            padding: 32px;
+            border-radius: 16px;
+        }
 
-.burrito button {
-    border: 2px solid #f9faf8;
-    font-size: 18px;
-    border-radius: 4px;
-}
+            .burrito button {
+                border: 2px solid #f9faf8;
+            }
 
-.message {
-    color: #f9faf8;
-}
+            .message {
+                color: #f9faf8;
+                font-size: 18px;
+            }
+                .message h3 {
+                    margin: 0;
+                    font-size: 24px;
+                }
 
 .footer {
-    display: flex;
-    padding: 16px;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-}
-
-.footer a {
-    flex: 1;
+    padding: 32px;
+    /*width: 1920px;*/
 }
